--- a/LeanderAudioConverter/Properties/Settings.settings
+++ b/LeanderAudioConverter/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="outputFormatIndex" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="maxTasks" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">4</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
