--- a/LeanderAudioConverter/App.config
+++ b/LeanderAudioConverter/App.config
@@ -22,6 +22,9 @@
             <setting name="outputFormatIndex" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="maxTasks" serializeAs="String">
+                <value>4</value>
+            </setting>
         </LeanderAudioConverter.Properties.Settings>
     </userSettings>
 </configuration>
